# qa_guru_python_5_13

./: pyproject.toml  test_fixtures.py  test_parametrize.py  tests_param.py  tests_skip.py
